--- a/Simple Calculator/index.html
+++ b/Simple Calculator/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Calculator</title>
+    <title>Percentage Calculator</title>
     <link rel="stylesheet" href="../style.css">
+    <style>
+        .para-c {
+            font-size: 36px;
+        }
+    </style>
 </head>
+
 <body>
-    
+
     <script src="app.js"></script>
 </body>
+
 </html>
