--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h1>Javascript Projects</h1>
             <a href="./Percentage Calculator/index.html">Percentage Calculator</a>
             <a href="./Menu/index.html">Resturant Menu</a>
+            <a href="./Simple Calculator/">Simple Calculator</a>
         </div>
     </section>
 
