--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <h1>Javascript Projects</h1>
             <a href="./Percentage Calculator/index.html">Percentage Calculator</a>
             <a href="./Menu/index.html">Resturant Menu</a>
-            <a href="./Simple Calculator/">Simple Calculator</a>
+            <a href="./Simple Calculator/index.html">Simple Calculator</a>
+            <a href="./RBG Color Picker/index.html">RGB Color Picker</a>
         </div>
     </section>
 
