dice game added

--- a/RBG Color Picker/index.html
+++ b/RBG Color Picker/index.html
@@ -6,58 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RGB Color Picker</title>
     <link rel="stylesheet" href="../style.css">
-
-    <style>
-        h1 {
-            font-size: 48px;
-        }
-
-        #main {
-            width: 700px;
-            margin-inline: auto;
-        }
-
-        #colorBox {
-            height: 500px;
-            background: rgb(98, 96, 96);
-            border-radius: 10px;
-        }
-
-        #inputs {
-            margin-top: 15px;
-        }
-
-        input {
-            width: 200px;
-            height: 25px;
-            padding: 10px;
-            font-size: 20px;
-            border-radius: 10px;
-            border: 2px gray solid;
-            outline: gray;
-        }
-
-        #input2 {
-            margin-inline: 8px;
-        }
-
-        #colorBtn {
-            width: 100%;
-            height: 50px;
-            margin-top: 20px;
-            font-size: 20px;
-            border: none;
-            border-radius: 10px;
-            background: lightgray;
-            transition: all 300ms;
-        }
-
-        #colorBtn:hover {
-            background: #292222;
-            color: lightgray;
-        }
-    </style>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
