--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="./Menu/index.html">Resturant Menu</a>
             <a href="./Simple Calculator/index.html">Simple Calculator</a>
             <a href="./RBG Color Picker/index.html">RGB Color Picker</a>
+            <a href="./Dice Game/index.html">Dice Game</a>
         </div>
     </section>
 
