--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 <body>
 
     <section class="sec-center">
-        <div>
-            <h1>Javascript Projects</h1>
+        <div id="main_div1">
+            <h1>JAVASCRIPT PROJECTS</h1>
             <a href="./Percentage Calculator/index.html">Percentage Calculator</a>
             <a href="./Menu/index.html">Resturant Menu</a>
             <a href="./Simple Calculator/index.html">Simple Calculator</a>
             <a href="./RBG Color Picker/index.html">RGB Color Picker</a>
             <a href="./Dice Game/index.html">Dice Game</a>
+            <a href="./Age Calculator/index.html">Age Calculator</a>
+            <a href="../Javascript-Assignments/index.html">JS Assignments</a>
         </div>
     </section>
 
