--- a/Age Calculator/index.html
+++ b/Age Calculator/index.html
@@ -10,21 +10,22 @@
 
 <body>
 
-    <div id="div_1">
-        <h1>Age Calculator</h1>
-        <b><label for="input1">Enter DOB :</label>
-            <input type="date" id="input1">
-            <input type="submit" value="Submit" id="UserSubmit" onclick="Calculate()"></b>
+    <section id="sec_1">
+        <div id="div_1">
+            <h1>Age Calculator</h1>
+            <b> <input type="date" id="input1"> <br>
+                <input type="submit" value="Submit" id="UserSubmit" onclick="Calculate()"></b>
 
-        <h3 id="DOB">User DOB =></h3>
-        <h3 id="Years">Total Years =></h3>
-        <h3 id="Months">Months =></h3>
-        <h3 id="Days">Days =></h3>
-        <h3 id="Hours">Hours =></h3>
-        <h3 id="Minutes">Minutes =></h3>
-        <h3 id="Seconds">Seconds =></h3>
-        <h3 id="Millisecond">Milliseconds =></h3>
-    </div>
+            <h3 id="DOB">User DOB</h3>
+            <h3 id="Years">Total Year</h3>
+            <h3 id="Months">Month</h3>
+            <h3 id="Days">Day</h3>
+            <h3 id="Hours">Hour</h3>
+            <h3 id="Minutes">Minute</h3>
+            <h3 id="Seconds">Second</h3>
+            <h3 id="Millisecond">Millisecond</h3>
+        </div>
+    </section>
 
     <script src="app.js"></script>
 </body>
