--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="./RBG Color Picker/index.html">RGB Color Picker</a>
             <a href="./Dice Game/index.html">Dice Game</a>
             <a href="./Age Calculator/index.html">Age Calculator</a>
-            <a href="./Attendance Application/index.html">Age Calculator</a>
+            <a href="./Attendance Application/index.html">Attendance Application</a>
             <a href="../Javascript-Assignments/index.html">JS Assignments</a>
         </div>
     </section>
