--- a/Attendance Application/index.html
+++ b/Attendance Application/index.html
@@ -36,13 +36,7 @@
                         <th class="w-1/4">Status</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td id="sNo" class="pl-2">--</td>
-                        <td id="Ename">--</td>
-                        <td id="time">--</td>
-                        <td id="reach">--</td>
-                    </tr>
+                <tbody id="attendanceTable">
                 </tbody>
             </table>
         </div>
