--- a/Attendance Application/index.html
+++ b/Attendance Application/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance Application</title>
     <script src="https://cdn.tailwindcss.com"></script>
-
 </head>
 
 <body>
@@ -17,7 +16,8 @@
     </section>
 
     <section class="flex justify-center py-12 text-lg">
-        <div class="flex justify-center py-8 px-3 gap-x-10 bg-indigo-400 lg:w-4/12 md:w-7/12 sm:w-10/12 rounded-xl shadow-md">
+        <div
+            class="flex justify-center py-8 px-3 gap-x-10 bg-indigo-400 lg:w-4/12 md:w-7/12 sm:w-10/12 rounded-xl shadow-md">
             <input type="text" id="input" placeholder="Enter Name"
                 class="px-3 py-2 border-b-2 shadow-md outline-0 w-80 rounded">
             <input type="submit" value="Submit" onclick="attendance()"
