--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <a href="./Dice Game/index.html">Dice Game</a>
             <a href="./Age Calculator/index.html">Age Calculator</a>
             <a href="./Attendance Application/index.html">Attendance Application</a>
+            <a href="./Calculator/index.html">Calculator</a>
+            <a href="./Image Gallery/index.html">Image Gallery</a>
             <a href="../Javascript-Assignments/index.html">JS Assignments</a>
         </div>
     </section>
