Text Editor Added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="./Attendance Application/index.html">Attendance Application</a>
             <a href="./Calculator/index.html">Calculator</a>
             <a href="./Image Gallery/index.html">Image Gallery</a>
+            <a href="./Text Editor/index.html">Text Editor</a>
             <a href="../Javascript-Assignments/index.html">JS Assignments</a>
         </div>
     </section>
