--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="./Calculator/index.html">Calculator</a>
             <a href="./Image Gallery/index.html">Image Gallery</a>
             <a href="./Text Editor/index.html">Text Editor</a>
+            <a href="./Expense Tracking App/index.html">Expense Tracking Application</a>
             <a href="../Javascript-Assignments/index.html">JS Assignments</a>
         </div>
     </section>
