--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <a href="./Image Gallery/index.html">Image Gallery</a>
             <a href="./Text Editor/index.html">Text Editor</a>
             <a href="./Expense Tracking App/index.html">Expense Tracking Application</a>
+            <a href="./Todo Local Storage/index.html">Todo Local Storage</a>
             <a href="../Javascript-Assignments/index.html">JS Assignments</a>
         </div>
     </section>
