--- a/index.html
+++ b/index.html
@@ -5,29 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Projects</title>
-    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class="bg-slate-800">
 
-    <section class="sec-center">
-        <div id="main_div1">
-            <h1>JAVASCRIPT PROJECTS</h1>
-            <a href="./Percentage Calculator/index.html">Percentage Calculator</a>
-            <a href="./Menu/index.html">Resturant Menu</a>
-            <a href="./Simple Calculator/index.html">Simple Calculator</a>
-            <a href="./RBG Color Picker/index.html">RGB Color Picker</a>
-            <a href="./Dice Game/index.html">Dice Game</a>
-            <a href="./Age Calculator/index.html">Age Calculator</a>
-            <a href="./Attendance Application/index.html">Attendance Application</a>
-            <a href="./Calculator/index.html">Calculator</a>
-            <a href="./Image Gallery/index.html">Image Gallery</a>
-            <a href="./Text Editor/index.html">Text Editor</a>
-            <a href="./Expense Tracking App/index.html">Expense Tracking Application</a>
-            <a href="./Todo Local Storage/index.html">Todo Local Storage</a>
-            <a href="../Javascript-Assignments/index.html">JS Assignments</a>
+    <section class="text-gray-600 body-font">
+        <div class="container px-5 py-20 mx-auto">
+            <div class="flex flex-col text-center w-full mb-20">
+                <h2 class="text-xs text-gray-500 tracking-widest font-medium title-font mb-1">SYED HAMZA QADRI</h2>
+                <h1 class="sm:text-3xl text-2xl font-medium title-font text-white">JAVASCRIPT PROJECTS</h1>
+            </div>
+            <div class="flex flex-wrap -m-4" id="assignmentDiv"></div>
         </div>
     </section>
+
+    <script src="app.js"></script>
 
 </body>
 
