--- a/Temperature Converter/index.html
+++ b/Temperature Converter/index.html
@@ -15,7 +15,7 @@
             <h1>Temperature Converter</h1>
 
             <div class="input-group">
-                <h3>Enter Temperature</h3>
+                <h3>Enter Temperature:</h3>
                 <input type="number" placeholder="Enter Temperature" id="userInput">
             </div>
 
