--- a/RBG Color Picker/index.html
+++ b/RBG Color Picker/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    
+
     <div id="main">
         <h1>RBG COLOR PICKER</h1>
         <div id="colorBox"></div>
@@ -23,18 +23,7 @@
         </div>
     </div>
 
-    <script>
-
-        var colorBox = document.getElementById("colorBox")
-        var input1 = document.getElementById("input1")
-        var input2 = document.getElementById("input2")
-        var input3 = document.getElementById("input3")
-
-        function changebgcolor() {
-            colorBox.style.backgroundColor = `rgb(${input1.value}, ${input2.value}, ${input3.value})`;
-        }
-
-    </script>
+    <script src="app.js"></script>
 
 </body>
 
