--- a/Attendance Application/index.html
+++ b/Attendance Application/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class="bg-gray-100">
     <section class="flex justify-center">
         <div class="w-2/4 text-center lg:text-6xl md:text-4xl font-bold p-10 text-white bg-blue-800">
             <h1>Attendance Application</h1>
