--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript Projects</title>
+    <title>Portfolio Projects</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -14,7 +14,7 @@
         <div class="container px-5 py-20 mx-auto">
             <div class="flex flex-col text-center w-full mb-20">
                 <h2 class="text-xs text-gray-500 tracking-widest font-medium title-font mb-1">SYED HAMZA QADRI</h2>
-                <h1 class="sm:text-3xl text-2xl font-medium title-font text-white">JAVASCRIPT PROJECTS</h1>
+                <h1 class="sm:text-3xl text-2xl font-medium title-font text-white">PORTFOLIO PROJECTS</h1>
             </div>
             <div class="flex flex-wrap -m-4" id="assignmentDiv"></div>
         </div>
