--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Projects</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-slate-800">
+<body class="bg-slate-800 text-white">
 
-    <section class="text-gray-600 body-font">
-        <div class="container px-5 py-20 mx-auto">
+    <section class="text-gray-300 body-font">
+        <div class="container mx-auto px-5 py-20">
             <div class="flex flex-col text-center w-full mb-20">
-                <h2 class="text-xs text-gray-500 tracking-widest font-medium title-font mb-1">SYED HAMZA QADRI</h2>
-                <h1 class="sm:text-3xl text-2xl font-medium title-font text-white">PORTFOLIO PROJECTS</h1>
+                <h2 class="text-xs text-gray-400 tracking-widest font-medium title-font mb-1">SYED HAMZA QADRI</h2>
+                <h1 class="sm:text-4xl text-3xl font-bold title-font text-white">PORTFOLIO PROJECTS</h1>
             </div>
             <div class="flex flex-wrap -m-4" id="assignmentDiv"></div>
         </div>
